--- a/FormSubmissionApp/FormSubmissionApp.vbproj
+++ b/FormSubmissionApp/FormSubmissionApp.vbproj
@@ -160,5 +160,8 @@
     <None Include="packages.config" />
     <None Include="README.md" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include=".gitignore" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
